programming-language/workspace/compiler/tests/snapshots/snapshots_test__error_type_mismatch.snap
---
source: tests/snapshots_test.rs
expression: error
---
error[E210]: Cannot assign string to variable of type byte
  --> type_mismatch.cb64:3:15
  |
3 |     x: byte = "string"
  |               ^^^^^^^^
